# pi_kobuki

./: notes.txt
pi_kobuki/: CMakeLists.txt  package.xml
pi_kobuki_bringup/: CMakeLists.txt  package.xml
pi_kobuki_bringup/config/: laser_filter.yaml  mux.yaml
pi_kobuki_bringup/launch/: head_camera_dynamixels.launch  hokuyo.launch  laser_filter.launch  logitech_teleop.launch  openni2_skip_5.launch  pi_kobuki.launch  pi_kobuki_minimal.launch  robot_model.launch  start_kobuki.launch  view_robot.launch  yocs_safety_controller.launch
pi_kobuki_demo/: CMakeLists.txt  package.xml
pi_kobuki_demo/launch/: move_base_waypoints.launch  odom_out_and_back.launch
pi_kobuki_description/: CMakeLists.txt  package.xml
pi_kobuki_description/launch/: test_pi_kobuki_urdf.launch
pi_kobuki_description/urdf/: pan_tilt_head_xtion.urdf.xacro  pi_kobuki.urdf.xacro  pi_kobuki_hexagons_laser.urdf.xacro  turtlebot_library.urdf.xacro  xtion.urdf.xacro
pi_kobuki_dynamixels/: CMakeLists.txt  package.xml
pi_kobuki_dynamixels/launch/: head_tracker_3d.launch  monitor_dynamixels.launch
pi_kobuki_msgs/: CMakeLists.txt  package.xml
pi_kobuki_nav/: CMakeLists.txt  package.xml
pi_kobuki_nav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  nav.rviz  rtabmap.rviz
pi_kobuki_tasks/: CMakeLists.txt  package.xml  setup.py
pi_kobuki_vision/: CMakeLists.txt  package.xml
piko/: package (pi-optiplex's conflicted copy 2016-06-08).xml
piko_bringup/: CMakeLists.txt
piko_tasks/: package.xml
(+83 files in other folders)
